--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_local_notifications: ^19.5.0
   webview_flutter: ^4.10.0
   url_launcher: ^6.3.1
+  shared_preferences: ^2.5.3
 
 
 
