--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   webview_flutter: ^4.10.0
   url_launcher: ^6.3.1
   shared_preferences: ^2.5.3
+  flutter_native_splash: ^2.4.4
 
 
 
